[gd_scene load_steps=17 format=2]

[ext_resource path="res://Recursos/metal lord.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://script_conta.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Menu1.png" type="Texture" id=3]
[ext_resource path="res://Recursos/tab.png" type="Texture" id=4]
[ext_resource path="res://Recursos/setas.png" type="Texture" id=5]
[ext_resource path="res://Recursos/enter.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "criar"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "popErro"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "popErro2"
length = 2.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.784314 ), Color( 1, 1, 1, 0.392157 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Button2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 32
outline_size = 1
outline_color = Color( 0.00392157, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Menu1" type="Sprite" parent="."]
position = Vector2( 514.149, 301.114 )
scale = Vector2( 0.536, 0.558 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 416.0
margin_top = 64.0
margin_right = 615.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "Criar Conta"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 256.0
margin_top = 176.0
margin_right = 412.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 1 )
text = "Email:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 256.0
margin_top = 240.0
margin_right = 412.0
margin_bottom = 279.0
custom_fonts/font = SubResource( 1 )
text = "Nickname:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 256.0
margin_top = 312.0
margin_right = 432.0
margin_bottom = 351.0
custom_fonts/font = SubResource( 1 )
text = "senha_tr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
margin_left = 448.0
margin_top = 176.0
margin_right = 704.0
margin_bottom = 208.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit2" type="LineEdit" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
margin_left = 448.0
margin_top = 240.0
margin_right = 704.0
margin_bottom = 272.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit3" type="LineEdit" parent="."]
modulate = Color( 1, 1, 1, 0.670588 )
margin_left = 448.0
margin_top = 312.0
margin_right = 704.0
margin_bottom = 344.0
secret = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 456.0
margin_top = 408.0
margin_right = 592.0
margin_bottom = 453.0
custom_fonts/font = SubResource( 2 )
text = "Criar"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/criar = SubResource( 3 )
anims/popErro = SubResource( 4 )
anims/popErro2 = SubResource( 5 )
anims/voltar = SubResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 344.0
margin_top = 144.0
margin_right = 736.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 0.596078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 24.0
margin_top = 96.0
margin_right = 365.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 7 )
text = "Email já cadastrado!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 280.0
margin_top = 144.0
margin_right = 752.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 0.596078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect2"]
margin_left = 24.0
margin_top = 96.0
margin_right = 365.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 7 )
text = "Nickname já cadastrado!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 432.0
margin_top = 456.0
margin_right = 608.0
margin_bottom = 501.0
custom_fonts/font = SubResource( 8 )
text = "voltar_tr"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tab" type="Sprite" parent="."]
position = Vector2( 160, 574.401 )
scale = Vector2( 0.0192432, 0.0192432 )
texture = ExtResource( 4 )

[node name="Label5" type="Label" parent="."]
margin_left = 184.0
margin_top = 568.0
margin_right = 206.0
margin_bottom = 588.0
custom_fonts/font = SubResource( 9 )
text = "ou_tr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="setas" type="Sprite" parent="."]
position = Vector2( 216, 574.401 )
scale = Vector2( 0.066, 0.066 )
texture = ExtResource( 5 )

[node name="Label6" type="Label" parent="."]
margin_left = 224.0
margin_top = 568.0
margin_right = 426.0
margin_bottom = 588.0
custom_fonts/font = SubResource( 10 )
text = "navegar_tr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="."]
margin_left = 480.0
margin_top = 568.0
margin_right = 568.0
margin_bottom = 588.0
custom_fonts/font = SubResource( 10 )
text = "sele_tr"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enter" type="Sprite" parent="."]
position = Vector2( 460, 574.401 )
scale = Vector2( 0.015, 0.016 )
texture = ExtResource( 6 )
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
